menu done[sauce,drinks(HTML,CSS)]

--- a/index.html
+++ b/index.html
@@ -460,189 +460,318 @@
             <div class="menu__list">
                 <a class="menu-pizza">Pizza</a>
                 <a class="menu-sauce">Sosy</a>
-                <a class="menu-offer">Pizza Promocyjna</a>
                 <a class="menu-drink">Napoje</a>
             </div>
 
-            <div class="pizza">
-                <div class="pizza__list">
-                    <div class="pizza__name">
+            <div class="pizza element">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
                         <p>
-                            1. Margharita
+                            Margharita
                             <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
                         </p>
-                        <div class="pizza__components">
+                        <div class="pizza__components element__components">
                             <p>Sos, ser</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>20,00zł</p>
                         <p>25,00zł</p>
                         <p>36,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
                         <p>
-                            2. Pepperoni
+                            Pepperoni
                             <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
                         </p>
-                        <div class="pizza__components">
+                        <div class="pizza__components element__components">
                             <p>sos, ser, czosnek, salami, papryka pepperoni</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>20,00zł</p>
                         <p>25,00zł</p>
                         <p>36,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
                         <p>
-                            3. Sycylijska
+                            Sycylijska
                             <i title="Owoce morza" class="fa-solid fa-fish"></i>
                         </p>
-                        <div class="pizza__components">
+                        <div class="pizza__components element__components">
                             <p>sos, ser, cebula, szynka, tuńczyk, oliwki</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>30,00zł</p>
                         <p>35,00zł</p>
                         <p>45,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
-                        <p>4. Hawajska</p>
-                        <div class="pizza__components">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
+                        <p>Hawajska</p>
+                        <div class="pizza__components element__components">
                             <p>sos, ser, szynka, ananas</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>24,00zł</p>
                         <p>29,00zł</p>
                         <p>40,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
-                        <p>5. Uczta Mięsna</p>
-                        <div class="pizza__components">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
+                        <p>Uczta Mięsna</p>
+                        <div class="pizza__components element__components">
                             <p>sos, ser, szynka, salami, kurczak, boczek, kabanos</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>36,00zł</p>
                         <p>44,00zł</p>
                         <p>52,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
                         <p>
-                            6. Salsa <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
+                            Salsa <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
                         </p>
-                        <div class="pizza__components">
+                        <div class="pizza__components element__components">
                             <p>sos, ser, szynka, cebula, kabanos, papryka pepperoni</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>31,00zł</p>
                         <p>36,00zł</p>
                         <p>47,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
                         <p>
-                            7. Cudny Ogród
+                            Cudny Ogród
                             <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
                         </p>
-                        <div class="pizza__components">
+                        <div class="pizza__components element__components">
                             <p>sos, szpinak, ser, cebula, pomidor, kukurydza</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>26,00zł</p>
                         <p>31,00zł</p>
                         <p>42,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
-                        <p>
-                            8. Wegetariańska
-                            <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
-                        </p>
-                        <div class="pizza__components">
-                            <p>sos, ser, pieczarki, papryka, kukurydza, brokuły</p>
-                        </div>
-                    </div>
-                    <div class="pizza__prices">
-                        <p>26,00zł</p>
-                        <p>31,00zł</p>
-                        <p>42,00zł</p>
-                    </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
-                </div>
-
-                <div class="pizza__list">
-                    <div class="pizza__name">
-                        <p>9. Fantazja</p>
-                        <div class="pizza__components">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
+                        <p>Fantazja</p>
+                        <div class="pizza__components element__components">
                             <p>sos, ser, cebula, szynka, kurczak, papryka</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>31,00zł</p>
                         <p>36,00zł</p>
                         <p>47,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
-                <div class="pizza__list">
-                    <div class="pizza__name">
-                        <p>10. Capriciosa</p>
-                        <div class="pizza__components">
+                <div class="pizza__list element__list">
+                    <div class="pizza__name element__name">
+                        <p>Capriciosa</p>
+                        <div class="pizza__components element__components">
                             <p>sos, ser, szynka, pieczarki</p>
                         </div>
                     </div>
-                    <div class="pizza__prices">
+                    <div class="pizza__prices element__prices">
                         <p>25,00zł</p>
                         <p>30,00zł</p>
                         <p>41,00zł</p>
                     </div>
-                    <button class="pizza__btn">Dodaj do koszyka</button>
+                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
             </div>
 
             <div class="sauce not-visible">
-                sauce
-            </div>
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos czosnkowy
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
 
-            <div class="promotion not-visible">
-                promotion
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos pomidorowy łagodny 
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos pomidorowy ostry 
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos meksykański 
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos koperkowy 
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Ketchup
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="sauce__list element__list">
+                    <div class="sauce__name element__name">
+                        <p>
+                            Sos 1000 wysp
+                        </p>
+                    </div>
+                    <div class="sauce__prices element__prices">
+                        <p>4,00zł</p>
+                    </div>
+                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
+                </div>
             </div>
 
             <div class="drinks not-visible">
-                drinks
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Coca Cola
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,5l - 6,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Sprite
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,5l - 6,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Fanta 
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,5l - 6,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Woda gazowana 
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,33l - 5,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Woda niegazowana 
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,33l - 5,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
+
+                <div class="drinks__list element__list">
+                    <div class="drinks__name element__name">
+                        <p>
+                            Tymbark
+                        </p>
+                    </div>
+                    <div class="drinks__prices element__prices">
+                        <p>0,5l - 6,00zł</p>
+                    </div>
+                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
+                </div>
             </div>
 
         </section>
@@ -820,7 +949,7 @@
             </div>
             <div class="footer__element footer__payment">
                 <p>Nasze formy płatności: <br>Gotówka, karta lub szybki przelew:</p>
-                <button class="footer__btn">Zamów online</button>
+                <a href="#menu" class="footer__btn">Zamów online</a>
             </div>
         </div>
 
